# MingleLLM

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  start.sh
.github/workflows/: bumpversion.yaml  flake8.yaml
app/: main.py
