[tool.poetry]
name = "MingleLLM"
version = "0.1.0"
description = "MingleLLM: FastAPI Server for Large Language Model"
authors = ["YoungJae Kim <coreakyj96@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/byeongal/MingleLLM"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.10.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
