[tool.black]
line-length = 119
target-version = ["py310"]


[tool.isort]
py_version = 3.10
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true
src_paths = ["src", "tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
version_files = ["pyproject.toml:version"]
tag_format = "$version"
update_changelog_on_bump = true

[tool.poetry]
name = "MingleLLM"
version = "0.0.1"
description = "MingleLLM: FastAPI Server for Large Language Model"
authors = ["YoungJae Kim <coreakyj96@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/byeongal/MingleLLM"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.10.0"
pre-commit = "^3.4.0"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
